added home page

--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
     <!-- custom css link -->
     <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+  <body class=" min-h-svh bg-[#010313] bg-[url(./images/background.png)] bg-no-repeat bg-top  ">
+    <section class=" flex min-h-screen items-center justify-center   ">
+        <div class=" flex flex-col items-center justify-center gap-8">
+            <h1 class="text-8xl text-white font-anton uppercase">alpha clash pro</h1>
+            <p class="text-white text-2xl">Unleash your keyboard kung fu: press "enter" to play.</p>
+            <button class="btn bg-white text-black">Play Now</button>
+        </div>
+    </section>
+
+
+
+  </body>
 </html>
