--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body class=" min-h-svh bg-[#010313] bg-[url(./images/background.png)] bg-no-repeat bg-top  ">
-    <section class=" flex min-h-screen items-center justify-center   ">
+
+    <!-- home screen / start screen  -->
+    <section class=" flex min-h-screen items-center justify-center hidden  ">
         <div class=" flex flex-col items-center justify-center gap-8">
             <h1 class="text-8xl text-white font-anton uppercase">alpha clash pro</h1>
             <p class="text-white text-2xl">Unleash your keyboard kung fu: press "enter" to play.</p>
@@ -23,6 +25,78 @@
         </div>
     </section>
 
+    <!-- middle screen  -->
+
+    <section class="">
+        <div class="flex flex-col items-center justify-center gap-6">
+             <!-- display screen -->
+             <div class="pt-4">
+                <div class="artboard artboard-horizontal phone-6 border-[20px] border-[#0A0113cc] bg-[#FFFFFFb3] rounded-[15px]  " >
+                    <div class="flex flex-col items-center justify-center "><p class="bg-[#2F2941] text-white px-4 pb-3 rounded-b-2xl">Don't watch keyboard  while playing...</p></div>
+                    <div class="flex  h-full items-center justify-center ">
+                        <p class="text-8xl font-bold">Y</p>
+                    </div>
+                </div>
+             </div>
+
+             <!-- keyboard -->
+             <div>
+                <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">q</kbd>
+                    <kbd class="kbd">w</kbd>
+                    <kbd class="kbd">e</kbd>
+                    <kbd class="kbd">r</kbd>
+                    <kbd class="kbd">t</kbd>
+                    <kbd class="kbd">y</kbd>
+                    <kbd class="kbd">u</kbd>
+                    <kbd class="kbd">i</kbd>
+                    <kbd class="kbd">o</kbd>
+                    <kbd class="kbd">p</kbd>
+                  </div> 
+                  <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">a</kbd>
+                    <kbd class="kbd">s</kbd>
+                    <kbd class="kbd">d</kbd>
+                    <kbd class="kbd">f</kbd>
+                    <kbd class="kbd">g</kbd>
+                    <kbd class="kbd">h</kbd>
+                    <kbd class="kbd">j</kbd>
+                    <kbd class="kbd">k</kbd>
+                    <kbd class="kbd">l</kbd>
+                  </div> 
+                  <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">z</kbd>
+                    <kbd class="kbd">x</kbd>
+                    <kbd class="kbd">c</kbd>
+                    <kbd class="kbd">v</kbd>
+                    <kbd class="kbd">b</kbd>
+                    <kbd class="kbd">n</kbd>
+                    <kbd class="kbd">m</kbd>
+                    <kbd class="kbd">/</kbd>
+                  </div>
+             </div>
+
+             <!-- life/score -->
+
+             <div class="flex justify-between w-4/5">
+                <!-- life btn -->
+                <button class="btn bg-[#894189] text-white border-none">
+                   Life
+                    <img src="./images/Group 23.svg" alt="">
+                    <span>1</span>                    
+                  </button>
+
+                  <!-- score btn -->
+                <button class="btn bg-[#360490]  text-white border-none">
+                   Score
+                    <img src="./images/monetization_on.svg" alt="">
+                   <span>1</span>
+                  </button>
+             </div>
+        </div>
+
+       
+    </section>
 
 
   </body>
