--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
   <body class=" min-h-svh bg-[#010313] bg-[url(./images/background.png)] bg-no-repeat bg-top  ">
 
     <!-- home screen / start screen  -->
-    <section class=" flex min-h-screen items-center justify-center hidden  ">
+    <section id="home-screen" class=" flex min-h-screen items-center justify-center   ">
         <div class=" flex flex-col items-center justify-center gap-8">
             <h1 class="text-8xl text-white font-anton uppercase">alpha clash pro</h1>
             <p class="text-white text-2xl">Unleash your keyboard kung fu: press "enter" to play.</p>
-            <button class="btn bg-white text-black">Play Now</button>
+            <button onclick="enterGame()" class="btn bg-white text-black">Play Now</button>
         </div>
     </section>
 
-    <!-- middle screen  -->
+    <!-- middle screen/ playground section   -->
 
-    <section class="">
+    <section id="playground-section" class=" hidden">
         <div class="flex flex-col items-center justify-center gap-6">
              <!-- display screen -->
              <div class="pt-4">
                 <div class="artboard artboard-horizontal phone-6 border-[20px] border-[#0A0113cc] bg-[#FFFFFFb3] rounded-[15px]  " >
                     <div class="flex flex-col items-center justify-center "><p class="bg-[#2F2941] text-white px-4 pb-3 rounded-b-2xl">Don't watch keyboard  while playing...</p></div>
                     <div class="flex  h-full items-center justify-center ">
-                        <p class="text-8xl font-bold">Y</p>
+                        <p id="display-alphabet" class="text-8xl font-bold uppercase">Y</p>
                     </div>
                 </div>
              </div>
@@ -42,37 +42,37 @@
              <!-- keyboard -->
              <div>
                 <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">q</kbd>
-                    <kbd class="kbd">w</kbd>
-                    <kbd class="kbd">e</kbd>
-                    <kbd class="kbd">r</kbd>
-                    <kbd class="kbd">t</kbd>
-                    <kbd class="kbd">y</kbd>
-                    <kbd class="kbd">u</kbd>
-                    <kbd class="kbd">i</kbd>
-                    <kbd class="kbd">o</kbd>
-                    <kbd class="kbd">p</kbd>
+                    <kbd id="q" class="kbd">q</kbd>
+                    <kbd id="w" class="kbd">w</kbd>
+                    <kbd id="e" class="kbd">e</kbd>
+                    <kbd id="r" class="kbd">r</kbd>
+                    <kbd id="t" class="kbd">t</kbd>
+                    <kbd id="y" class="kbd">y</kbd>
+                    <kbd id="u" class="kbd">u</kbd>
+                    <kbd id="i" class="kbd">i</kbd>
+                    <kbd id="o" class="kbd">o</kbd>
+                    <kbd id="p" class="kbd">p</kbd>
                   </div> 
                   <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">a</kbd>
-                    <kbd class="kbd">s</kbd>
-                    <kbd class="kbd">d</kbd>
-                    <kbd class="kbd">f</kbd>
-                    <kbd class="kbd">g</kbd>
-                    <kbd class="kbd">h</kbd>
-                    <kbd class="kbd">j</kbd>
-                    <kbd class="kbd">k</kbd>
-                    <kbd class="kbd">l</kbd>
+                    <kbd id="a" class="kbd">a</kbd>
+                    <kbd id="s" class="kbd">s</kbd>
+                    <kbd id="d" class="kbd">d</kbd>
+                    <kbd id="f" class="kbd">f</kbd>
+                    <kbd id="g" class="kbd">g</kbd>
+                    <kbd id="h" class="kbd">h</kbd>
+                    <kbd id="j" class="kbd">j</kbd>
+                    <kbd id="k" class="kbd">k</kbd>
+                    <kbd id="l" class="kbd">l</kbd>
                   </div> 
                   <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">z</kbd>
-                    <kbd class="kbd">x</kbd>
-                    <kbd class="kbd">c</kbd>
-                    <kbd class="kbd">v</kbd>
-                    <kbd class="kbd">b</kbd>
-                    <kbd class="kbd">n</kbd>
-                    <kbd class="kbd">m</kbd>
-                    <kbd class="kbd">/</kbd>
+                    <kbd id="z" class="kbd">z</kbd>
+                    <kbd id="x" class="kbd">x</kbd>
+                    <kbd id="c" class="kbd">c</kbd>
+                    <kbd id="v" class="kbd">v</kbd>
+                    <kbd id="b" class="kbd">b</kbd>
+                    <kbd id="n" class="kbd">n</kbd>
+                    <kbd id="m" class="kbd">m</kbd>
+                    <kbd id="/" class="kbd">/</kbd>
                   </div>
              </div>
 
@@ -83,14 +83,14 @@
                 <button class="btn bg-[#894189] text-white border-none">
                    Life
                     <img src="./images/Group 23.svg" alt="">
-                    <span>1</span>                    
+                    <span id="current-life">5</span>                    
                   </button>
 
                   <!-- score btn -->
                 <button class="btn bg-[#360490]  text-white border-none">
                    Score
                     <img src="./images/monetization_on.svg" alt="">
-                   <span>1</span>
+                   <span id="current-score">0</span>
                   </button>
              </div>
         </div>
@@ -98,6 +98,22 @@
        
     </section>
 
+    <!-- final score section -->
 
+    <section id="final-score" class="flex justify-center items-center min-h-screen hidden">
+      <div class=" font-poppins  text-center space-y-5 bg-[#ffffff33] p-4 rounded-lg">
+        <h1 class="text-7xl  text-white ">
+          <span class="font-extrabold">Score:</span> <span class="font-medium" id="last-score">14</span>
+        </h1>
+        <button onclick="enterGame()" class="btn bg-white text-black">Play Again</button>
+        <p class="text-white text-2xl ">Practice will make you pro</p>
+      </div>
+    </section>
+
+    <!-- <script src="./js/utility.js"></script>
+    <script src="./js/alpha.js"></script> -->
+
+    <script src="./js/normal.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
